modified:   package-lock.json 	modified:   package.json 	modified:   src/App.jsx 	modified:   src/Components/AboutUscomponent.jsx 	modified:   src/Components/Card.jsx 	modified:   src/Components/Contactform.jsx 	modified:   src/Components/Navbar.jsx 	modified:   src/index.js 	modified:   src/pages/About.jsx 	modified:   src/pages/Home.jsx 	modified:   src/pages/Products.jsx 	modified:   src/style/App.css

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -207,7 +207,7 @@ body {
 }
 .form {
   width: 100%;
-  /* height: max-content; */
+  height: max-content;
   display: flex;
   flex-direction: column;
   height: 90%;
